Bug 446543 - Crash on attempting to filter collection using date
Summary: Crash on attempting to filter collection using date
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collection Browser (other bugs)
Version First Reported In: kf5
Platform: Ubuntu Linux
: NOR crash
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-06 08:16 UTC by robert marshall
Modified: 2024-03-30 09:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description robert marshall 2021-12-06 08:16:29 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Select edit filter for collection
2. Drag down 'last played
3 . Select before (or after) bringing up a date 1/1/1970
4. Click on date attempting to change it 

OBSERVED RESULT
Amarok crashes

EXPECTED RESULT
Date selection panel should appear

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System) 
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
I'm using the build of  Jun 26 2021 from Pedro Gomez's ppa not sure if that's the most recent build
Comment 1 Myriam Schweingruber 2021-12-06 20:09:27 UTC
Could you get a backtrace?
Comment 2 robert marshall 2021-12-13 19:19:49 UTC
Sorry about delay ... events... and this isn't full trying to work out how to install symbols from that ppa

[KCrash Handler]
#4  0x00007f21fc7992e0 in QWidget::setFocus(Qt::FocusReason) () at /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#5  0x00007f21fd3ee686 in  () at /lib/x86_64-linux-gnu/libamaroklib.so.1
#6  0x00007f21fc79f5de in QWidget::event(QEvent*) () at /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#7  0x00007f21fc75c783 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#8  0x00007f21fc763e5b in QApplication::notify(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#9  0x00007f21fbc607ba in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x565472189980, event=0x7ffeee36d300) at kernel/qcoreapplication.cpp:1063
#10 0x00007f21fc762e77 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () at /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#11 0x00007f21fc7b9370 in  () at /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#12 0x00007f21fc7bc615 in  () at /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#13 0x00007f21fc75c783 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#14 0x00007f21fbc607ba in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x565471abed20, event=0x7ffeee36d5c0) at kernel/qcoreapplication.cpp:1063
#15 0x00007f21fc04ab13 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at /lib/x86_64-linux-gnu/libQt5Gui.so.5
#16 0x00007f21fc01fe2c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib/x86_64-linux-gnu/libQt5Gui.so.5
#17 0x00007f21e5503a6e in  () at /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#18 0x00007f21f0a1d8eb in g_main_context_dispatch () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#19 0x00007f21f0a70d28 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x00007f21f0a1b023 in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#21 0x00007f21fbcba204 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x56546f3768c0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#22 0x00007f21fbc5f11b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7ffeee36d8f0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#23 0x00007f21fbc67604 in QCoreApplication::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#24 0x000056546ecc165c in  ()
#25 0x00007f21fb5c0565 in __libc_start_main (main=0x56546ecbc940, argc=1, argv=0x7ffeee36dbc8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffeee36dbb8) at ../csu/libc-start.c:332
#26 0x000056546ecc1e9e in  ()
[Inferior 1 (process 9369) detached]
Comment 3 Myriam Schweingruber 2021-12-14 10:50:16 UTC
Hm, don't know if there are actually debugging symbols in the PPA, doesn't seem so. I guess somebody with a self-compiled version needs to try this. I have been quite lazy recently and use the PPA as well...
But I can confirm the crash, too.
Comment 4 robert marshall 2021-12-14 14:16:03 UTC
I'll try to do a build with debug and get a good traceback - not this week though!
Comment 5 Bug Janitor Service 2024-03-30 09:37:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/amarok/-/merge_requests/75
Comment 6 Tuomas Nurmi 2024-03-30 09:45:30 UTC
Git commit 7ec45dddb109fd391b900dad8705dacd4088a3c3 by Tuomas Nurmi.
Committed on 30/03/2024 at 09:36.
Pushed by nurmi into branch 'master'.

Fix a crash in collection filter date selection.

KPopupFrame needs to have MainWidget set nowadays. Do that to avoid crash
on any click on date selectors in collection filter builder.

There still seems to be something not totally correct with the actual date
filtering, but that can be fixed later.

M  +3    -3    ChangeLog
M  +1    -3    src/widgets/kdatecombo.cpp

https://invent.kde.org/multimedia/amarok/-/commit/7ec45dddb109fd391b900dad8705dacd4088a3c3