Fix a crash in collection filter date selection.

KPopupFrame needs to have MainWidget set nowadays. Do that to avoid crash
on any click on date selectors in collection filter builder.

There still seems to be something not totally correct with the actual date
filtering, but that can be fixed later.

BUG: 446543